integrations/salesforce/mdapi/objects/Vehicle__c.object
<CustomObject>
    <label>Vehicle</label>
    <pluralLabel>Vehicles</pluralLabel>
    <nameField>
        <label>Vehicle Number</label>
        <type>AutoNumber</type>
        <displayFormat>VEH-{00000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <type>Text</type>
        <length>60</length>
        <required>true</required>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <type>Text</type>
        <length>60</length>
        <required>true</required>
    </fields>
    <fields>
        <fullName>Trim__c</fullName>
        <label>Trim</label>
        <type>Text</type>
        <length>60</length>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Number</type>
        <precision>4</precision>
        <scale>0</scale>
        <required>true</required>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <label>VIN</label>
        <type>Text</type>
        <length>32</length>
        <unique>true</unique>
        <externalId>true</externalId>
    </fields>
    <fields>
        <fullName>Body_Type__c</fullName>
        <label>Body Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value><fullName>Sedan</fullName><default>false</default></value>
                <value><fullName>SUV</fullName><default>false</default></value>
                <value><fullName>Hatchback</fullName><default>false</default></value>
                <value><fullName>Coupe</fullName><default>false</default></value>
                <value><fullName>Convertible</fullName><default>false</default></value>
                <value><fullName>Truck</fullName><default>false</default></value>
                <value><fullName>Van</fullName><default>false</default></value>
                <value><fullName>Wagon</fullName><default>false</default></value>
                <value><fullName>MPV</fullName><default>false</default></value>
                <value><fullName>Pickup</fullName><default>false</default></value>
                <value><fullName>Luxury</fullName><default>false</default></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fuel_Type__c</fullName>
        <label>Fuel Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value><fullName>Petrol</fullName><default>false</default></value>
                <value><fullName>Diesel</fullName><default>false</default></value>
                <value><fullName>Electric</fullName><default>false</default></value>
                <value><fullName>Hybrid</fullName><default>false</default></value>
                <value><fullName>Plugin_Hybrid</fullName><default>false</default></value>
                <value><fullName>CNG</fullName><default>false</default></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transmission__c</fullName>
        <label>Transmission</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value><fullName>Manual</fullName><default>false</default></value>
                <value><fullName>Automatic</fullName><default>false</default></value>
                <value><fullName>CVT</fullName><default>false</default></value>
                <value><fullName>DCT</fullName><default>false</default></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <type>Text</type>
        <length>40</length>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <type>Currency</type>
        <precision>16</precision>
        <scale>2</scale>
    </fields>
    <fields>
        <fullName>Odometer__c</fullName>
        <label>Odometer</label>
        <type>Number</type>
        <precision>9</precision>
        <scale>1</scale>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value><fullName>Available</fullName><default>true</default></value>
                <value><fullName>Reserved</fullName><default>false</default></value>
                <value><fullName>In_Drive</fullName><default>false</default></value>
                <value><fullName>Maintenance</fullName><default>false</default></value>
                <value><fullName>Sold</fullName><default>false</default></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <type>Lookup</type>
        <referenceTo>Branch__c</referenceTo>
        <relationshipName>Vehicles</relationshipName>
        <deleteConstraint>SetNull</deleteConstraint>
    </fields>
    <fields>
        <fullName>Is_Featured__c</fullName>
        <label>Is Featured</label>
        <type>Checkbox</type>
        <defaultValue>false</defaultValue>
    </fields>
    <fields>
        <fullName>Primary_Image_Url__c</fullName>
        <label>Primary Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Gallery_Urls__c</fullName>
        <label>Gallery URLs (JSON)</label>
        <type>LongTextArea</type>
        <length>32000</length>
    </fields>
    <fields>
        <fullName>Video_Url__c</fullName>
        <label>Video URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Spec_Sheet_Json__c</fullName>
        <label>Spec Sheet (JSON)</label>
        <type>LongTextArea</type>
        <length>32000</length>
    </fields>
    <fields>
        <fullName>Accessories_Json__c</fullName>
        <label>Accessories (JSON)</label>
        <type>LongTextArea</type>
        <length>32000</length>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>LongTextArea</type>
        <length>32000</length>
    </fields>
    <fields>
        <fullName>Seating_Capacity__c</fullName>
        <label>Seating Capacity</label>
        <type>Number</type>
        <precision>2</precision>
        <scale>0</scale>
    </fields>
    <fields>
        <fullName>Mileage_Kmpl__c</fullName>
        <label>Mileage (km/l)</label>
        <type>Number</type>
        <precision>4</precision>
        <scale>1</scale>
    </fields>
    <fields>
        <fullName>Price_Max__c</fullName>
        <label>Price (Top Variant)</label>
        <type>Currency</type>
        <precision>16</precision>
        <scale>2</scale>
        <description>Price of the top-spec variant, so Price__c can represent the starting (base variant) price and this represents the range ceiling.</description>
    </fields>
    <fields>
        <fullName>Safety_Rating__c</fullName>
        <label>Safety Rating (Stars)</label>
        <type>Number</type>
        <precision>1</precision>
        <scale>0</scale>
    </fields>
    <fields>
        <fullName>Availability_Status__c</fullName>
        <label>Availability Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value><fullName>In_Stock</fullName><default>true</default></value>
                <value><fullName>Limited_Stock</fullName><default>false</default></value>
                <value><fullName>On_Request</fullName><default>false</default></value>
                <value><fullName>Coming_Soon</fullName><default>false</default></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Best_Seller__c</fullName>
        <label>Is Best Seller</label>
        <type>Checkbox</type>
        <defaultValue>false</defaultValue>
    </fields>
    <fields>
        <fullName>Is_New_Launch__c</fullName>
        <label>Is New Launch</label>
        <type>Checkbox</type>
        <defaultValue>false</defaultValue>
    </fields>
    <fields>
        <fullName>Engine_Options_Json__c</fullName>
        <label>Engine Options (JSON)</label>
        <type>LongTextArea</type>
        <length>32000</length>
    </fields>
    <fields>
        <fullName>Safety_Features_Json__c</fullName>
        <label>Safety Features (JSON)</label>
        <type>LongTextArea</type>
        <length>32000</length>
    </fields>
    <fields>
        <fullName>Infotainment_Features_Json__c</fullName>
        <label>Infotainment Features (JSON)</label>
        <type>LongTextArea</type>
        <length>32000</length>
    </fields>
    <fields>
        <fullName>Exterior_Highlights_Json__c</fullName>
        <label>Exterior Highlights (JSON)</label>
        <type>LongTextArea</type>
        <length>32000</length>
    </fields>
    <fields>
        <fullName>Interior_Highlights_Json__c</fullName>
        <label>Interior Highlights (JSON)</label>
        <type>LongTextArea</type>
        <length>32000</length>
    </fields>
    <fields>
        <fullName>Colors_Json__c</fullName>
        <label>Available Colors (JSON)</label>
        <type>LongTextArea</type>
        <length>32000</length>
    </fields>
    <fields>
        <fullName>Faqs_Json__c</fullName>
        <label>FAQs (JSON)</label>
        <type>LongTextArea</type>
        <length>32000</length>
    </fields>
    <fields>
        <fullName>Vehicle_Model__c</fullName>
        <label>Vehicle Model</label>
        <type>Lookup</type>
        <referenceTo>Vehicle_Model__c</referenceTo>
        <relationshipName>Stock_Units</relationshipName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Catalog model this stock unit is. Spec/media fields on Vehicle__c are superseded by the model's and kept only until the platform reads from the model.</description>
    </fields>
    <fields>
        <fullName>Dealership__c</fullName>
        <label>Dealership</label>
        <type>Lookup</type>
        <referenceTo>Dealership__c</referenceTo>
        <relationshipName>Vehicles</relationshipName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Dealership holding this stock unit.</description>
    </fields>
    <sharingReasons>
        <fullName>TDM_Dealership__c</fullName>
        <label>TDM Dealership</label>
    </sharingReasons>
    <validationRules>
        <fullName>Branch_Belongs_To_Dealership</fullName>
        <active>true</active>
        <description>Keeps a vehicle's branch inside its own dealership, so dealership-scoped access can never leak across dealers.</description>
        <errorConditionFormula>AND(NOT(ISBLANK(Branch__c)), NOT(ISBLANK(Dealership__c)), Branch__r.Dealership__c &lt;&gt; Dealership__c)</errorConditionFormula>
        <errorDisplayField>Branch__c</errorDisplayField>
        <errorMessage>The selected branch belongs to a different dealership.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dealership_Required</fullName>
        <active>true</active>
        <description>Every vehicle belongs to a dealership: dealership-scoped sharing (TdmRecordSharing) has nothing to grant on a record without one.</description>
        <errorConditionFormula>ISBLANK(Dealership__c)</errorConditionFormula>
        <errorDisplayField>Dealership__c</errorDisplayField>
        <errorMessage>Select the dealership this record belongs to.</errorMessage>
    </validationRules>
</CustomObject>